# db-webserver

./: .gitignore  Cargo.toml  Rocket.toml  readme.md
migrations/2022-05-16-224652_data/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
