[package]
name = "db_webserver"
version = "0.1.0"
authors = ["idheepan@gmail.com>"]
edition = "2021"

[dependencies]
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master", default-features = false}

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "chrono"] 

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
